Add scaladoc and scala 2.10 compat
- add scaladoc to all classes
- move readsupport class to descriptor
- add support for scala 2.10 so can be used nicely with spark

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ scala:
    - 2.11.7
 script:
   - sbt ++2.11.7 test
+  - sbt ++2.10.5 test
 cache:
   directories:
-  - .thrift-0.9.2
-  - .ivy2
-  - .sbt
+   - ~/.thrift-0.9.2
+   - ~/.ivy2
+   - ~/.sbt
