--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
+*.class
+*.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
 target/
-.DS_Store
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.ensime
+.ensime_cache/
+.scala_dependencies
+.worksheet
 .idea
-.idea_modules
-*.swp
